[gd_scene load_steps=3 format=3 uid="uid://b10nxdjtxx588"]

[ext_resource type="Theme" uid="uid://dk1lq0oeybxad" path="res://ui/theme.tres" id="1_3ol7b"]
[ext_resource type="Script" path="res://ui/settings/settings_menu.gd" id="2_0nvhi"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3ol7b")
script = ExtResource("2_0nvhi")

[node name="Backdrop" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.498039)

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(320, 160)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -50.0
offset_right = 160.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="Container" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Settings"

[node name="HSeparator" type="HSeparator" parent="Panel/Container"]
layout_mode = 2

[node name="MusicSlider" type="HBoxContainer" parent="Panel/Container"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/Container/MusicSlider"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "Music"

[node name="Slider" type="HSlider" parent="Panel/Container/MusicSlider"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="Value" type="Label" parent="Panel/Container/MusicSlider"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "50%"
horizontal_alignment = 2

[node name="EffectsSlider" type="HBoxContainer" parent="Panel/Container"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/Container/EffectsSlider"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "Effects"

[node name="Slider" type="HSlider" parent="Panel/Container/EffectsSlider"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="Value" type="Label" parent="Panel/Container/EffectsSlider"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "50%"
horizontal_alignment = 2

[node name="FullscreenCheckBox" type="CheckButton" parent="Panel/Container"]
layout_mode = 2
text = "Fullscreen"

[node name="CloseButton" type="Button" parent="Panel/Container"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Close"

[connection signal="drag_ended" from="Panel/Container/MusicSlider/Slider" to="." method="_on_music_slider_drag_ended"]
[connection signal="drag_ended" from="Panel/Container/EffectsSlider/Slider" to="." method="_on_effects_slider_drag_ended"]
[connection signal="pressed" from="Panel/Container/FullscreenCheckBox" to="." method="_on_fullscreen_check_box_pressed"]
[connection signal="pressed" from="Panel/Container/CloseButton" to="." method="_on_close_button_pressed"]
